# axiom

./: .gitignore  bad.txt  example.py  good.txt  old.py  pyproject.toml  pyrightconfig.json
axiom/algorithms/: dqn.py  types.py  utils.py
axiom/algorithms/factories/: __init__.py  buffer.py  network.py  optim.py
axiom/algorithms/rollout/: rollout.py  step.py  types.py
axiom/algorithms/update/: __init__.py  batch.py  epoch.py  loss.py  step.py
axiom/envs/: types.py
axiom/envs/factories/: __init__.py  jumanji.py
axiom/envs/wrappers/conversion/: __init__.py  jumanji.py
axiom/envs/wrappers/logging/: __init__.py  episode.py
axiom/envs/wrappers/observation/: flatten.py
axiom/networks/: actor.py  input.py  torso.py
